Fix layout issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -309,6 +309,10 @@ border-radius: 5px 5px 5px 5px;
 	padding-left: 100px;
 	padding-right: 100px;
 }
+
+.noMargin {
+	margin: 0 !important;
+}
 /* --- layout */
 
 /* ++++ icons */
